plugins {
	id 'org.springframework.boot' version '2.6.4'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'br.curso.coffe'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    	implementation 'org.springframework.boot:spring-boot-starter-webflux'
    	compileOnly 'org.projectlombok:lombok'
    	annotationProcessor 'org.projectlombok:lombok'
    	testImplementation 'org.springframework.boot:spring-boot-starter-test'
    	testImplementation 'io.projectreactor:reactor-test'

        // circuit breaker
    	implementation 'io.github.resilience4j:resilience4j-circuitbreaker:1.7.1'
        implementation 'io.github.resilience4j:resilience4j-core:1.7.1'
        implementation 'io.github.resilience4j:resilience4j-all:1.7.1'

        // retry

        implementation 'org.springframework.retry:spring-retry:1.3.1'

    	// Redis

    	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    	implementation 'org.springframework.data:spring-data-redis'

    	/// SpringDoc
    	implementation group: 'org.springdoc', name: 'springdoc-openapi-webflux-ui', version: '1.6.3'
    	implementation("org.springframework.boot:spring-boot-starter-validation")
    	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.8'


        implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
